Fix: Wrap dialog proposal categories.

--- a/web/themes/custom/hoeringsportal/assets/css/module/_dialogue.scss
+++ b/web/themes/custom/hoeringsportal/assets/css/module/_dialogue.scss
@@ -90,6 +90,7 @@
 
     .form-checkboxes {
       display: flex;
+      flex-wrap: wrap;
       gap: $spacer;
       order: 2;
     }
